--- a/PyViz.ipynb
+++ b/PyViz.ipynb
@@ -2,13 +2,162 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "                datasetid fields.code_postal     fields.commune  \\\n",
+      "0   localisation-hopitaux              59320         HAUBOURDIN   \n",
+      "1   localisation-hopitaux              59000              LILLE   \n",
+      "2   localisation-hopitaux              59000              LILLE   \n",
+      "3   localisation-hopitaux              59700   MARCQ-EN-BAROEUL   \n",
+      "4   localisation-hopitaux              59150          WATTRELOS   \n",
+      "5   localisation-hopitaux              59120               LOOS   \n",
+      "6   localisation-hopitaux              59100            ROUBAIX   \n",
+      "7   localisation-hopitaux              59113             SECLIN   \n",
+      "8   localisation-hopitaux              59200          TOURCOING   \n",
+      "9   localisation-hopitaux              59160      (LOMME) LILLE   \n",
+      "10  localisation-hopitaux              59100            ROUBAIX   \n",
+      "11  localisation-hopitaux              59200          TOURCOING   \n",
+      "12  localisation-hopitaux              59200          TOURCOING   \n",
+      "13  localisation-hopitaux              59280        ARMENTIERES   \n",
+      "14  localisation-hopitaux              59000              LILLE   \n",
+      "15  localisation-hopitaux              59000              LILLE   \n",
+      "16  localisation-hopitaux              59000              LILLE   \n",
+      "17  localisation-hopitaux              59000              LILLE   \n",
+      "18  localisation-hopitaux              59160      (LOMME) LILLE   \n",
+      "19  localisation-hopitaux              59650  VILLENEUVE D'ASCQ   \n",
+      "20  localisation-hopitaux              59810            LESQUIN   \n",
+      "21  localisation-hopitaux              59223              RONCQ   \n",
+      "22  localisation-hopitaux              59100            ROUBAIX   \n",
+      "\n",
+      "                   fields.geo_point_2d         fields.geometry.coordinates  \\\n",
+      "0    [50.61301285066, 2.9867346234108]   [2.9867346234108, 50.61301285066]   \n",
+      "1   [50.634754244585, 3.0311165347557]  [3.0311165347557, 50.634754244585]   \n",
+      "2    [50.64651137837, 3.0839524153393]   [3.0839524153393, 50.64651137837]   \n",
+      "3   [50.666496024961, 3.1015500890599]  [3.1015500890599, 50.666496024961]   \n",
+      "4   [50.700749035758, 3.2220152228126]  [3.2220152228126, 50.700749035758]   \n",
+      "5    [50.610567295391, 3.007890732357]   [3.007890732357, 50.610567295391]   \n",
+      "6   [50.679169333955, 3.1738283246326]  [3.1738283246326, 50.679169333955]   \n",
+      "7    [50.54664145579, 3.0178100510722]   [3.0178100510722, 50.54664145579]   \n",
+      "8   [50.724650885578, 3.1480043388737]  [3.1480043388737, 50.724650885578]   \n",
+      "9    [50.65389134502, 2.9923404297026]   [2.9923404297026, 50.65389134502]   \n",
+      "10   [50.685912854851, 3.178288786343]   [3.178288786343, 50.685912854851]   \n",
+      "11  [50.716458768421, 3.1566224550655]  [3.1566224550655, 50.716458768421]   \n",
+      "12  [50.744644307373, 3.1802901785553]  [3.1802901785553, 50.744644307373]   \n",
+      "13   [50.684677901903, 2.867836606694]   [2.867836606694, 50.684677901903]   \n",
+      "14   [50.619888998318, 3.044785797726]   [3.044785797726, 50.619888998318]   \n",
+      "15  [50.649147300325, 3.0854991221233]  [3.0854991221233, 50.649147300325]   \n",
+      "16   [50.60866967145, 3.0359684078101]   [3.0359684078101, 50.60866967145]   \n",
+      "17  [50.620238091599, 3.0771792776184]  [3.0771792776184, 50.620238091599]   \n",
+      "18  [50.651394711752, 2.9731517882953]  [2.9731517882953, 50.651394711752]   \n",
+      "19  [50.653010425216, 3.1521857919809]  [3.1521857919809, 50.653010425216]   \n",
+      "20  [50.588897155281, 3.0894868271423]  [3.0894868271423, 50.588897155281]   \n",
+      "21   [50.732764203664, 3.115016521002]   [3.115016521002, 50.732764203664]   \n",
+      "22   [50.682616137418, 3.197768849979]   [3.197768849979, 50.682616137418]   \n",
+      "\n",
+      "   fields.geometry.type                                     fields.libelle  \\\n",
+      "0                 Point             CHR CENTRE HOSPITALIER JEAN LUXEMBOURG   \n",
+      "1                 Point                               POLYCLINIQUE DU BOIS   \n",
+      "2                 Point                           POLYCLINIQUE LA LOUVIERE   \n",
+      "3                 Point  CLINIQUE DU SPORT ET DE CHIRURGIE ORTHOPEDIQUE...   \n",
+      "4                 Point                             CHR CENTRE HOSPITALIER   \n",
+      "5                 Point             CHR CENTRE HOSPITALIER LOOS HAUBOURDIN   \n",
+      "6                 Point     CHR CENTRE HOSPITALIER DE ROUBAIX VICTOR PROVO   \n",
+      "7                 Point                   CHR CENTRE HOSPITALIER DE SECLIN   \n",
+      "8                 Point                         POLYCLINIQUE DU VAL DE LYS   \n",
+      "9                 Point                            CLINIQUE DE LA MITTERIE   \n",
+      "10                Point                                CLINIQUE SAINT JEAN   \n",
+      "11                Point                        CLINIQUE DE LA VICTOIRE HPM   \n",
+      "12                Point                 CH CENTRE HOSPITALIER GUSTAVE DRON   \n",
+      "13                Point                             CHR CENTRE HOSPITALIER   \n",
+      "14                Point                                CLINIQUE LA CHARITE   \n",
+      "15                Point                         CLINIQUE AMBROISE PARE HPM   \n",
+      "16                Point  CHRU CENTRE HOSPITALIER REGIONAL ET UNIVERSITAIRE   \n",
+      "17                Point  HOPITAL SAINT VINCENT DE PAUL GROUPE INSTITUT ...   \n",
+      "18                Point  HOPITAL SAINT PHILIBERT GROUPE INSTITUT CATHOL...   \n",
+      "19                Point                 HOPITAL PRIVE DE VILLENEUVE D'ASCQ   \n",
+      "20                Point                   CLINIQUE LILLE SUD SOS MAINS HPM   \n",
+      "21                Point                                CLINIQUE SAINT ROCH   \n",
+      "22                Point                           HOPITAL DE LA FRATERNITE   \n",
+      "\n",
+      "   fields.objectid                                         fields.url  \\\n",
+      "0             6229                                 http://www.ghlh.fr   \n",
+      "1             3350                   http://www.polyclinique-bois.com   \n",
+      "2              979  http://hopital-prive-la-louviere-lille.ramsayg...   \n",
+      "3             1168                http://www.clinique-sport-lille.fr/   \n",
+      "4             1877                        http://www.ch-wattrelos.com   \n",
+      "5             1095                                 http://www.ghlh.fr   \n",
+      "6             1410                           http://www.ch-roubaix.fr   \n",
+      "7             1571                  http://www.ch-seclin.fr/index/1/1   \n",
+      "8             1734        http://www.groupehpm.com/cliniques/index/87   \n",
+      "9             3857                   http://www.clinique-mitterie.com   \n",
+      "10            1416                                                NaN   \n",
+      "11            5619  http://www.groupehpm.com/clinique-victoire-tou...   \n",
+      "12            1668                         http://www.ch-tourcoing.fr   \n",
+      "13             184                       http://www.ch-armentieres.fr   \n",
+      "14            4708  http://www.118218.fr/lille-59/hopital-centre-h...   \n",
+      "15            4259  http://www.groupehpm.com/clinique-ambroisepare...   \n",
+      "16            5538                           http://www.chru-lille.fr   \n",
+      "17            4238            http://www.saintvincentdepaul-lille.fr/   \n",
+      "18            1036                http://www.saintphilibert-lomme.fr/   \n",
+      "19            2109  http://www.generale-de-sante.fr/hopital-prive-...   \n",
+      "20             830        http://www.groupehpm.com/clinique-lille-sud   \n",
+      "21            1395                  http://www.clinique-saintroch.fr/   \n",
+      "22            1428                           http://www.ch-roubaix.fr   \n",
+      "\n",
+      "                  geometry.coordinates geometry.type  \\\n",
+      "0    [2.9867346234108, 50.61301285066]         Point   \n",
+      "1   [3.0311165347557, 50.634754244585]         Point   \n",
+      "2    [3.0839524153393, 50.64651137837]         Point   \n",
+      "3   [3.1015500890599, 50.666496024961]         Point   \n",
+      "4   [3.2220152228126, 50.700749035758]         Point   \n",
+      "5    [3.007890732357, 50.610567295391]         Point   \n",
+      "6   [3.1738283246326, 50.679169333955]         Point   \n",
+      "7    [3.0178100510722, 50.54664145579]         Point   \n",
+      "8   [3.1480043388737, 50.724650885578]         Point   \n",
+      "9    [2.9923404297026, 50.65389134502]         Point   \n",
+      "10   [3.178288786343, 50.685912854851]         Point   \n",
+      "11  [3.1566224550655, 50.716458768421]         Point   \n",
+      "12  [3.1802901785553, 50.744644307373]         Point   \n",
+      "13   [2.867836606694, 50.684677901903]         Point   \n",
+      "14   [3.044785797726, 50.619888998318]         Point   \n",
+      "15  [3.0854991221233, 50.649147300325]         Point   \n",
+      "16   [3.0359684078101, 50.60866967145]         Point   \n",
+      "17  [3.0771792776184, 50.620238091599]         Point   \n",
+      "18  [2.9731517882953, 50.651394711752]         Point   \n",
+      "19  [3.1521857919809, 50.653010425216]         Point   \n",
+      "20  [3.0894868271423, 50.588897155281]         Point   \n",
+      "21   [3.115016521002, 50.732764203664]         Point   \n",
+      "22   [3.197768849979, 50.682616137418]         Point   \n",
+      "\n",
+      "             record_timestamp                                  recordid  \n",
+      "0   2017-11-20T23:00:01+00:00  c7646a78d8e00ea05428c5c54a5dd76127f89e73  \n",
+      "1   2017-11-20T23:00:01+00:00  a2d78721334b54e79ab60b3da180e92eb621edb5  \n",
+      "2   2017-11-20T23:00:01+00:00  a8591a3333181faca7c35e0f9f61d70c342f5474  \n",
+      "3   2017-11-20T23:00:01+00:00  e008f8d7e269e8e1a7027a1f4558c1cb041eff31  \n",
+      "4   2017-11-20T23:00:01+00:00  e9712a359e46b1a1c2bb2946c02d4c19ccab88b2  \n",
+      "5   2017-11-20T23:00:01+00:00  3284f0b918627ca40f09d8ae5d38a505533bf8e3  \n",
+      "6   2017-11-20T23:00:01+00:00  ecfcb6149a0c84b4cf2f68a32940de5b5cd12ba0  \n",
+      "7   2017-11-20T23:00:01+00:00  fc53695ccb11ac4b8c89b3d16871597cbcb70e16  \n",
+      "8   2017-11-20T23:00:01+00:00  952dcc58254e2095dda3677d8c69d1a7848fd915  \n",
+      "9   2017-11-20T23:00:01+00:00  90799c39903b5d6cd3faea06c899ed024ef806aa  \n",
+      "10  2017-11-20T23:00:01+00:00  e66497959d88f737396eb6d7f89d8b74da17d1d6  \n",
+      "11  2017-11-20T23:00:01+00:00  1f32397037ace426a75e8804339f9742ba12dae2  \n",
+      "12  2017-11-20T23:00:01+00:00  e98c8cc3099cad591ba226ed98b25f1d574421ca  \n",
+      "13  2017-11-20T23:00:01+00:00  ef7af72bc5c0f854b8b59588da4ea1badbb52ffd  \n",
+      "14  2017-11-20T23:00:01+00:00  a07d3f0cf4cc37d7b9884db1d7ba1c6b99450cdf  \n",
+      "15  2017-11-20T23:00:01+00:00  91616b8677973f91df8af60d66d0516a70eae2fd  \n",
+      "16  2017-11-20T23:00:01+00:00  8056efd564ac6b87c1f68a89f6e721b9143e0237  \n",
+      "17  2017-11-20T23:00:01+00:00  a6c96bb9ea3b36b40ebd08c52e21773e62e6a07f  \n",
+      "18  2017-11-20T23:00:01+00:00  9a24e25a3c3f8df7dd42794948446bf24d30b429  \n",
+      "19  2017-11-20T23:00:01+00:00  cfaf8af5c53f36cb29a47aeffc96cdcd2b777a44  \n",
+      "20  2017-11-20T23:00:01+00:00  db244d576e3a44e4b3c7591cda36a2e7d6195d7b  \n",
+      "21  2017-11-20T23:00:01+00:00  b19ef5400c9edeff86cb0af8021f22692a75a2dd  \n",
+      "22  2017-11-20T23:00:01+00:00  163c463e8e5c7b98d2c36697b6a3ca3a72204aea  \n",
       "            datasetid fields.code_postal             fields.commune  \\\n",
       "0    bureaux-de-poste              59150                  WATTRELOS   \n",
       "1    bureaux-de-poste              59120                       LOOS   \n",
@@ -334,21 +483,21 @@
     "import json\n",
     "from pandas.io.json import json_normalize\n",
     "\n",
-    "postOfficeCall = json.loads(requests.get('https://opendata.lillemetropole.fr/api/records/1.0/search/?dataset=bureaux-de-poste&rows=120').text)\n",
+    "baseUrl = \"https://opendata.lillemetropole.fr/api/records/1.0/search/?dataset=\"\n",
+    "paramUrl = \"&rows=120\"\n",
     "\n",
-    "#postOfficeResponse = postOfficeCall.content\n",
-    "#hospitalCall = requests.get(\"https://opendata.lillemetropole.fr/api/records/1.0/search/?dataset=localisation-hopitaux&rows=120\")\n",
-    "#hospitalResponse = hospitalCall.content\n",
-    "#shopCall = requests.get(\"https://opendata.lillemetropole.fr/api/records/1.0/search/?dataset=magasins-et-boutiques&rows=1200\")\n",
-    "#shopResponse = shopCall.content\n",
-    "#cineCall = requests.get(\"https://opendata.lillemetropole.fr/api/records/1.0/search/?dataset=cinemas-theatres-mel&rows=1200\")\n",
-    "#cineResponse = cineCall.content\n",
-    "#schoolCall = requests.get(\"https://opendata.lillemetropole.fr/api/records/1.0/search/?dataset=adresse-et-geolocalisation-des-etablissements-denseignement-du-premier-et-second&rows=1200\")\n",
-    "#schoolResponse = schoolCall.content\n",
+    "services = { \"bureaux-de-poste\",\n",
+    "            #\"localisation-hopitaux\",\n",
+    "            #\"magasins-et-boutiques\",\n",
+    "            #\"cinemas-theatres-mel\",\n",
+    "            #\"adresse-et-geolocalisation-des-etablissements-denseignement-du-premier-et-second\",\n",
+    "}\n",
     "\n",
-    "df = pd.DataFrame.from_dict(pd.io.json.json_normalize(postOfficeCall['records']), orient='columns')\n",
-    "\n",
-    "print (df)"
+    "for service in services:\n",
+    " urlApi = baseUrl + service + paramUrl\n",
+    " urlCall = json.loads(requests.get(urlApi).text)\n",
+    " dataFrame  = pd.DataFrame.from_dict(pd.io.json.json_normalize(urlCall['records']), orient='columns')\n",
+    " print (dataFrame)\n"
    ]
   },
   {
